--- a/Freelancer_Website/requirements.txt
+++ b/Freelancer_Website/requirements.txt
@@ -5,18 +5,30 @@ charset-normalizer==3.0.1
 crispy-bootstrap5==0.7
 cryptography==39.0.2
 defusedxml==0.7.1
+diff-match-patch==20200713
 Django==4.1.7
 django-allauth==0.52.0
 django-crispy-forms==2.0
+django-filter==22.1
+django-import-export==3.1.0
+et-xmlfile==1.1.0
 gunicorn==20.1.0
 idna==3.4
+MarkupPy==1.14
 oauthlib==3.2.2
+odfpy==1.4.1
+openpyxl==3.1.2
+Pillow==9.4.0
 pycparser==2.21
 PyJWT==2.6.0
 python3-openid==3.2.0
+PyYAML==6.0
 requests==2.28.2
 requests-oauthlib==1.3.1
 sqlparse==0.4.3
+tablib==3.3.0
 tzdata==2022.7
 urllib3==1.26.14
 whitenoise==6.4.0
+xlrd==2.0.1
+xlwt==1.3.0
