--- a/Freelancer_Website/requirements.txt
+++ b/Freelancer_Website/requirements.txt
@@ -1,9 +1,19 @@
 asgiref==3.6.0
+attrs==22.2.0
+autobahn==23.1.2
+Automat==22.10.0
+Brotli==1.0.9
 certifi==2022.12.7
 cffi==1.15.1
+channels==4.0.0
 charset-normalizer==3.0.1
+click==8.1.3
+colorama==0.4.6
+ConfigArgParse==1.5.3
+constantly==15.1.0
 crispy-bootstrap5==0.7
 cryptography==39.0.2
+daphne==4.0.0
 defusedxml==0.7.1
 diff-match-patch==20200713
 Django==4.1.7
@@ -12,23 +22,52 @@ django-crispy-forms==2.0
 django-filter==22.1
 django-import-export==3.1.0
 et-xmlfile==1.1.0
+Flask==2.2.3
+Flask-BasicAuth==0.2.0
+Flask-Cors==3.0.10
+gevent==22.10.2
+geventhttpclient==2.0.9
+greenlet==2.0.2
 gunicorn==20.1.0
+hyperlink==21.0.0
 idna==3.4
+incremental==22.10.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+locust==2.15.1
 MarkupPy==1.14
+MarkupSafe==2.1.2
+msgpack==1.0.5
 oauthlib==3.2.2
 odfpy==1.4.1
 openpyxl==3.1.2
 Pillow==9.4.0
+psutil==5.9.4
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.21
 PyJWT==2.6.0
+pyOpenSSL==23.1.1
 python3-openid==3.2.0
+pywin32==306
 PyYAML==6.0
+pyzmq==25.0.2
 requests==2.28.2
 requests-oauthlib==1.3.1
+roundrobin==0.0.4
+service-identity==21.1.0
+six==1.16.0
 sqlparse==0.4.3
 tablib==3.3.0
+Twisted==22.10.0
+twisted-iocpsupport==1.0.3
+txaio==23.1.1
+typing_extensions==4.5.0
 tzdata==2022.7
 urllib3==1.26.14
+Werkzeug==2.2.3
 whitenoise==6.4.0
 xlrd==2.0.1
 xlwt==1.3.0
+zope.event==4.6
+zope.interface==6.0
